# pickle-fuzzer

./: .gitignore  BENCHMARKS.md  CHANGELOG.md  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  DEVELOPING.md  README.md  SECURITY.md  TESTING.md  action.yml  deny.toml  get-modules.py  pyproject.toml  stdlib_complete.txt  tarpaulin.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: action-smoke.yml  ci.yml  fuzz-python-env-comparison.yml  fuzz-python-env-replay.yml  fuzz.yml  release.yml  security.yml
benches/: generation.rs
data/: stdlib_complete.txt
fuzz/: Cargo.toml  README.md
fuzz/examples/: report_python_env.rs
fuzz/fuzz_targets/: all_protocols.rs  generate_pickle.rs  mutate_pickle.rs  validate_with_python.rs
fuzz/fuzz_targets/common/: mod.rs
fuzz/src/: lib.rs  python_env.rs
fuzz/tests/: python_env_contract.rs
plans/: fuzz-and-security-ci-pr.md  fuzz-and-security-ci.md
python/: .gitignore
python/cisco_ai_defense_pickle_fuzzer/: __init__.py  _native.pyi  fuzzer.py
python/examples/: ci-harness.py  harness.py
python/pickle_fuzzer/: __init__.py  _native.pyi  fuzzer.py
python/pickle_whip/: __init__.py  _native.pyi  fuzzer.py
python/tests/: test_fuzzer.py  test_generation.py  test_get_modules.py
scripts/: action-atheris.sh  action-install.sh  action-run.sh  get-modules.py  validate-pickles.py
src/: cli.rs  lib.rs  main.rs  opcodes.rs  protocol.rs  python.rs  stack.rs  state.rs
src/generator/: core.rs  emission.rs  mod.rs  mutation.rs  source.rs  stack_ops.rs  utils.rs  validation.rs
src/mutators/: bitflip.rs  boundary.rs  character.rs  memoindex.rs  mod.rs  offbyone.rs  stringlen.rs  typeconfusion.rs
tests/: integration_test.rs
