# Copyright 2025 Cisco Systems, Inc. and its affiliates
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#
# SPDX-License-Identifier: Apache-2.0

[package]
name = "cisco-ai-defense-pickle-fuzzer"
version = "0.1.0"
edition = "2021"
authors = ["Cisco AI Defense"]
description = "A structure-aware test case generator for Python pickle parsers and validators"
repository = "https://github.com/cisco-ai-defense/pickle-fuzzer"
homepage = "https://github.com/cisco-ai-defense/pickle-fuzzer"
documentation = "https://docs.rs/cisco-ai-defense-pickle-fuzzer"
readme = "README.md"
license = "Apache-2.0"
keywords = ["fuzzing", "pickle", "security", "testing", "generator", "corpus"]
categories = ["development-tools::testing", "command-line-utilities"]

[[bin]]
name = "pickle-fuzzer"
path = "src/main.rs"

[features]
default = []
python-bindings = ["pyo3"]

[dependencies]
arbitrary = { version = "1.4.2", features = ["derive"] }
clap = { version = "4.5.51", features = ["derive"] }
color-eyre = "0.6.5"
phf = { version = "0.13.1", features = ["macros", "serde"] }
pyo3 = { version = "0.27.1", optional = true }
rand = "0.9.2"
rand_chacha = "0.9.0"
rayon = "1.11.0"
serde = { version = "1.0.228", features = ["derive"] }

[dev-dependencies]
assert_cmd = "2.0"
criterion = { version = "0.5", features = ["html_reports"] }
tempfile = "3.8"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ["cfg(tarpaulin)"] }

[[bench]]
name = "generation"
harness = false

[lib]
name = "pickle_fuzzer"
path = "src/lib.rs"
crate-type = ["rlib", "cdylib"]
