# Copyright 2025 Cisco Systems, Inc. and its affiliates
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#
# SPDX-License-Identifier: Apache-2.0

[project]
name = "pickle-fuzzer"
version = "0.1.0"
description = "Structure-aware pickle generator for fuzzing"
readme = "README.md"
requires-python = "==3.11.14"
dependencies = [
    "atheris>=2.3.0",
]

[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[tool.maturin]
features = ["python-bindings"]
python-source = "python"
module-name = "pickle_fuzzer._native"

[dependency-groups]
dev = [
    "maturin>=1.0,<2.0",
    "pytest>=9.0.1",
]

