# Copyright 2025 Cisco Systems, Inc. and its affiliates
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#
# SPDX-License-Identifier: Apache-2.0

[package]
name = "pickle-whip-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"

[dependencies.pickle-whip]
path = ".."

[workspace]
members = ["."]

[[bin]]
name = "generate_pickle"
path = "fuzz_targets/generate_pickle.rs"
test = false
doc = false

[[bin]]
name = "mutate_pickle"
path = "fuzz_targets/mutate_pickle.rs"
test = false
doc = false

[[bin]]
name = "all_protocols"
path = "fuzz_targets/all_protocols.rs"
test = false
doc = false

[[bin]]
name = "validate_with_python"
path = "fuzz_targets/validate_with_python.rs"
test = false
doc = false
